<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="project1.cs175.com.jeffreytranmemorygame.MainActivity"
    android:longClickable="false"
    android:id="@+id/mainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeTo"
        android:textSize="28sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcomeText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/playButton"
        android:textSize="36sp"
        android:paddingEnd="10sp"
        android:paddingStart="10sp"
        android:onClick="startGame"
        android:background="@drawable/button"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/rulesButton"
        android:textSize="36sp"
        android:paddingEnd="10sp"
        android:paddingStart="10sp"
        android:onClick="rules"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:outlineProvider="bounds"
        android:background="@drawable/button"/>
</RelativeLayout>
